@@ -1,15 +1,15 @@
 /****************************************************************************
  *
- * $Source: /usr/local/cvsroot/unixlib/source/c/strsignal,v $
- * $Date: 1997/10/09 19:59:42 $
- * $Revision: 1.6 $
+ * $Source: /usr/local/cvsroot/gccsdk/unixlib/source/strsignal.c,v $
+ * $Date: 2001/01/29 15:10:19 $
+ * $Revision: 1.2 $
  * $State: Exp $
- * $Author: unixlib $
+ * $Author: admin $
  *
  ***************************************************************************/
 
 #ifdef EMBED_RCSID
-static const char rcs_id[] = "$Id: strsignal,v 1.6 1997/10/09 19:59:42 unixlib Exp $";
+static const char rcs_id[] = "$Id: strsignal.c,v 1.2 2001/01/29 15:10:19 admin Exp $";
 #endif
 
 #include <signal.h>
@@ -21,7 +21,7 @@ static const char rcs_id[] = "$Id: strsignal,v 1.6 1997/10/09 19:59:42 unixlib E
 const char *
 strsignal (int signum)
 {
-  if (signum < 0 || signum > NSIG)
+  if (signum < 0 || signum >= NSIG)
     {
       static char unknown_signal[] = "Unknown signal 00000000000";
 
