@@ -1,8 +1,8 @@
 ;----------------------------------------------------------------------------
 ;
 ; $Source: /usr/local/cvsroot/gccsdk/unixlib/source/sys/_alloca.s,v $
-; $Date: 2001/09/11 13:05:55 $
-; $Revision: 1.3.2.1 $
+; $Date: 2002/07/19 13:12:30 $
+; $Revision: 1.3.2.2 $
 ; $State: Exp $
 ; $Author: admin $
 ;
@@ -29,7 +29,7 @@ alloca		; just in case
 	STMFD	sp!, {lr}
 	BL	malloc
 	CMP	a1, #0
-	CMPNE	fp, #0
+	CMPNE	fp, #0			;FIXME: if fp = NULL, we have a memory leak
 	[ ALLOCA_FATAL = 0
 	stackreturn	EQ, "pc"
 	|
@@ -37,19 +37,31 @@ alloca		; just in case
 	; and force an abort - just like a true alloca function should.
 	ADREQ	a1, |__alloca_malloc_msg|
 	SWIEQ	XOS_Write0
-	BEQ	abort		; never returns
+	BEQ	abort			; never returns
 	]
+
+	; Overwrite the return link value of the caller by __alloca_free which will
+	; free the malloc'd block and call the original return link value.
+
+	; + 0 : original __alloca_list value
+	; + 4 : return link value of caller (i.e. [fp, #-4])
+	; + 8 : start contents block returned from alloca()
 
 	LDR	a3, =|__alloca_list|
 	LDR	a2, [fp, #-4]
 	LDR	a4, [a3]
 	STR	a2, [a1, #4]
-	STR	a4, [a1]
-	STR	a1, [a3]
-	AND	a2, a2, #&fc000003
+	STR	a4, [a1, #0]
+	STR	a1, [a3]		; Add the malloc'd block in front of the __alloca_list
+
+	[ {CONFIG} = 26
+	AND	a2, a2, #&fc000003	; a2 = PSR flags
 	ADR	a3, |__alloca_free|
 	BIC	a3, a3, #&fc000003
 	ORR	a2, a2, a3
+	|
+	ADR	a3, |__alloca_free|
+	]
 	STR	a2, [fp, #-4]
 	ADD	a1, a1, #8
 	stackreturn	AL, "pc"
