@@ -1,3 +1,14 @@
+Tue Sep 24 12:50:37 2002  John Tytgat  <John.Tytgat@aaug.net>
+
+	* strsignal.c (strsignal): strsignal(NSIG) wasn't detected
+	as an error.
+	* signal.h (sys_siglist): const'ify
+	* signal/signame.c (sys_siglist):  Likewise.
+	* signal/_signal.s (__h_error): Using the NAME macro.
+	* sys/_alloca.s (alloca): Added some comments how this
+	works; Added APCS-32 compatibility.
+	* sys/_sigjmp.s (sigsetjmp): No need to save a2 & ip.
+
 Tue Sep 24 12:28:40 2002  Peter Naulls  <peter@chocky.org>
 
 	* netinet/in.h (struct ip_opts): Rename ip_opts to Ip_opts to
